Add version spring-messagesource-xliff:2.0.0